--- a/mytest/e2e/02-delete.yaml
+++ b/mytest/e2e/02-delete.yaml
@@ -1,8 +1,8 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 delete:
-# Delete a Pod with the specified name
-- apiVersion: v1
-  kind: Pod
+# Delete a CR instance with the specified name
+- apiVersion: samplecontroller.k8s.io/v1alpha1
+  kind: Foo
   metadata:
     name: test-foo
